Clean up, allow one-line strings in localization files
While allowing one-line strings in localization files, this technically allows multi-line strings
where the first line begins on the same line as the localization key. Obviously this would be
ugly within the localization file so it should be avoided.

The only way to avoid this would be to peek the entire remainder of the node, including all
chunk kinds, and determine if the outcome only spans a single line. This would mean capturing
the entire raw string which means effectively making a separate pass over the entire string
prior to the actual parsing pass. This is undesirable from a performance standpoint for sure.

I might play around with it and run some benchmarks. Currently I want to avoid any overall
slowdown of the parser as much as possible.

--- a/src/test/locale/test_lang.lang
+++ b/src/test/locale/test_lang.lang
@@ -3,7 +3,11 @@ directly from the documentation. The only change made is
 to support the removal of angle braces from type declaration
 syntax.
 
-Also a couple strings with random tests
+Also a few strings for random tests
+
+## Some one-line strings
+[FOO] Foo BAR baz
+[BAR] Boo FAR faz
 
 [TEST]
 ##! foo: string, bar: number, baz: boolean
@@ -29,7 +33,6 @@ Forward with template: {{> TEST2 }}
 [test:TEST2]
 Test category, default subcategory, forwarded via template
 
-
 [test(test):TEST]
 ## Having the same keys as keys with specified categories but without
 ## specified subcategories is allowed, as those are given the subcategory
@@ -44,6 +47,10 @@ Forward with script: {{! res.TEST2() !}} ## Args forwarded automatically
 [test(test):TEST2]
 Test category, test subcategory, forwarded via script
 Testing script args forwarding: {{! args.foo !}}
+
+#######################################################################################################################
+## Begin original YAMDBF strings ######################################################################################
+#######################################################################################################################
 
 [CMD_BLACKLIST_ERR_NOSELF]
 You can not blacklist your own account.
