Add more documentation

--- a/src/test/locale/test_lang.lang
+++ b/src/test/locale/test_lang.lang
@@ -15,7 +15,7 @@ Also a few strings for random tests
 ##! any: any[]
 {{ foo }} {{ bar }} {{ baz }}
 {{ boo }} {{ far }} {{ faz }}
-Forwarding \[TEST2]: {{> TEST2 }}
+Forwarding \[TEST2]: {{; TEST2 }}
 
 [TEST2]
 ##! arg: string
