test(Localization): add unit tests for 'any' type type declarations

--- a/src/__test__/locale/test/test2.lang
+++ b/src/__test__/locale/test/test2.lang
@@ -49,3 +49,11 @@ foo{{! bar.join('') !}}baz
 [args:test3]
 ##! bar?: string
 foo{{ bar ?}}baz
+
+[args:test4]
+##! bar: any
+foo{{ bar }}baz
+
+[args:test5]
+##! bar: any[]
+foo{{! args.bar.join('') !}}baz
