tooling(docs): update docs prepare task
* add first localization guide

--- a/src/__test__/locale/test/test2.lang
+++ b/src/__test__/locale/test/test2.lang
@@ -30,6 +30,12 @@ baz
 ## Should error
 foo{{> bar }}baz
 
+[test11]
+foobarbaz
+
+[test11]
+boofarfaz
+
 [testCat:test1]
 ## Test categories
 fooBARbaz
