feat: only trim end of localization strings when building

--- a/src/__test__/locale/test/test1.lang
+++ b/src/__test__/locale/test/test1.lang
@@ -5,6 +5,9 @@ foobarbaz
 
 [oneLine:test1] boofarfaz
 
+[oneLine:test2] boofarfaz
+foobarbaz
+
 [test2]
 ## Test regular template
 ## Should equal: foobarbaz
