feat: add implicit $vars for template args in script templates

--- a/src/__test__/locale/test/test2.lang
+++ b/src/__test__/locale/test/test2.lang
@@ -63,3 +63,12 @@ foo{{ bar }}baz
 [args:test5]
 ##! bar: any[]
 foo{{! args.bar.join('') !}}baz
+
+[args:test6]
+## Testing usage of `$` vars for template arguments
+##! bar: String, far: String
+foo{{! $bar.toUpperCase() !}}baz
+boo{{!
+	let baz = 'far';
+	return $far + baz;
+!}}faz
