feat(pipes): add split pipe, update slice pipe to indicate array support

--- a/src/__test__/locale/test/test3.lang
+++ b/src/__test__/locale/test/test3.lang
@@ -46,6 +46,7 @@ foo{{? bar | toUpperCase }}baz
 {{ bar | normalizeWhitespace | truncate(10) }}
 {{ foo | truncate(10) }}
 {{ bar | normalizeWhitespace | truncate(5, '') }}
+{{ bar | normalizeWhitespace | split(' ') | pick(1) }}
 
 [test19]
 ## Test other base pipe functions
