feat(TemplateParser): add support for comments in multi-line templates
This change only applies to non-script templates. Script template bodies must consist of exclusively embedded JavaScript code so comments contained within script-templates must still be JavaScript comments (`//`, `/* */`).

--- a/src/__test__/locale/test/test3.lang
+++ b/src/__test__/locale/test/test3.lang
@@ -83,3 +83,27 @@ foo{{? bar | toUpperCase }}baz
 {{ foo | unique }}
 {{ foo | join('+') }}
 {{ foo | length }}
+
+[test22]
+## Test line comments within multi-line templates
+##! foo: String, bar: String, baz?: String
+{{
+	## independent comment
+
+	foo ## inline comment
+	| toLowerCase ## inline comment
+	## comment splitting two pipe lines
+	| capitalize
+
+	## independent comment
+}}
+{{>
+	## Argument bar should equal 'bar'
+	test12 ## fooBARbaz
+	| toUpperCase ## FOOBARBAZ
+}}
+{{?
+	baz ## baz won't be passed
+	| default('baz')
+	| repeat(3) ## bazbazbaz
+}}
