refactor(templates): rename forward template -> include template

--- a/src/__test__/locale/test/test1.lang
+++ b/src/__test__/locale/test/test1.lang
@@ -35,7 +35,7 @@ foo
 baz
 
 [test5]
-## Test forward template and forward template args forwarding
+## Test include template and include template args forwarding
 ## Should equal: foofoobarbazbaz
 ## When bar === 'bar'
 ## Should equal: foofoobazbaz
